🩹 Fixed Footer alignment issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -45,16 +45,10 @@ body {
 small{
     font-size: 80%;
     font-weight: 400;
-}
-
-footer{
-    ul{
-        list-style: none;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        gap: .25rem;
-    }
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: .25rem;
 }
 
 * {
